# base95

./: Cargo.toml  LICENSE  README.md  TODO.md
examples/: avg_toward_one.rs  avg_toward_zero.rs  print_digits.rs  print_random.rs
src/: digits.rs  lib.rs
