[package]
name = "base95"
version = "0.1.0"
authors = ["Kim Seungha <seungha.me@gmail.com>"]
edition = "2018"
license = "MIT"
description = "Textual representation of base 95 fractional numbers with arbitrary precision"
repository = "https://github.com/seungha-kim/base95"
categories = ["mathematics", "encoding"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dev-dependencies]
rand = "0.8.3"